syntax = "proto3";

package architect;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    package_name: "com.archerimpact.architect.ontology"
    flat_package: true
};

message identifyingDocument {
    string number = 1;
    string numberType = 2;
    string issuedBy = 3;
    string issuedIn = 4;
    bool valid = 5;
    string label = 6;
    string issuedOn = 7;
    string notes = 8;
}