syntax = "proto3";

package architect;

import "scalapb/scalapb.proto";
import "architect/identifyingDocument.proto";

option (scalapb.options) = {
    package_name: "com.archerimpact.architect.ontology"
    flat_package: true
};

message vessel {
    string name = 1;
    repeated identifyingDocument identifyingDocuments = 2;
}